# ProductRank

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  PRD.md  README.md  TICKETS.md  alembic.ini  docker-compose.yml  pyproject.toml  seed.py  seed_msmarco.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_pg_search_bm25.py
data/ingest/: fiqa.py  msmarco.py
docs/: BASELINE.md
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/experiments/: page.tsx
frontend/components/: HowItWorks.tsx  InfoTip.tsx  ResultColumn.tsx
frontend/lib/: api.ts  copy.ts  divergence.ts  results.ts
results/: eval_dev.json  eval_test.bm25only.bak.json  eval_test.json  eval_test_sample100.json
scripts/: diagnose_rerank.py
src/productrank/: __init__.py  cache.py  cli.py  config.py  db.py  embed.py  ingest.py  main.py  models.py  ratelimit.py  schemas.py
src/productrank/evaluation/: __init__.py  metrics.py  run.py  significance.py
src/productrank/observability/: __init__.py  logging.py  metrics.py
src/productrank/retrieval/: __init__.py  dense.py  embeddings.py  fusion.py  rerank.py  sparse.py  types.py
src/productrank/routers/: __init__.py  experiments.py  health.py  products.py  results.py  search.py
src/productrank/services/: __init__.py  experiments.py  search.py
tests/: conftest.py  test_api.py  test_cache.py  test_fusion.py  test_metrics.py  test_retrieval_integration.py  test_significance.py
