[project]
name = "productrank"
version = "0.1.0"
description = "Evaluation-first multi-stage retrieval and ranking platform over BEIR/FiQA"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Aditya Pimpalkar" }]

# Every dependency here earns its place (PRD NFR-6). Justifications live next to each.
dependencies = [
    "fastapi>=0.115",            # async API + Pydantic + OpenAPI
    "uvicorn[standard]>=0.30",   # ASGI server
    "pydantic>=2.7",             # request/response validation
    "pydantic-settings>=2.3",    # env-driven config
    "sqlalchemy>=2.0",           # DB access (sync engine; psycopg3)
    "psycopg[binary]>=3.1",      # Postgres driver
    "pgvector>=0.3",             # SQLAlchemy + pgvector type/operators
    "alembic>=1.13",             # migrations
    "redis>=5.0",                # embedding/result/rerank cache + job state
    "openai>=1.30",              # text-embedding-3-small (embeddings only)
    "numpy>=1.26",               # vectors, fusion, significance math
    "scipy>=1.11",               # paired t-test / bootstrap (significance)
    "sentence-transformers>=3.0", # cross-encoder rerank (ms-marco-MiniLM-L-6-v2)
    "pytrec-eval-terrier>=0.5",  # IR-standard metrics (trec_eval binding)
    "structlog>=24.1",           # structured JSON logs + correlation ids
    "slowapi>=0.1.9",            # per-IP rate limiting
    "prometheus-client>=0.20",   # /metrics exposition
    "httpx>=0.27",               # dataset download
    "tenacity>=8.3",             # retry/backoff for the embedding path
    "tqdm>=4.66",                # ingest/embed progress
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pre-commit>=3.7",
]

[project.scripts]
productrank = "productrank.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/productrank"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
# E501: line length handled by the formatter.
# B008: FastAPI's Depends()/BackgroundTasks defaults are the framework idiom, not a bug.
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
ignore_missing_imports = true
plugins = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.uv]
package = true
